// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows the creation and listing of todos 1`] = `
<div
  className="App"
>
  <input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <ul
    className="todo-list"
  />
</div>
`;

exports[`allows the creation and listing of todos 2`] = `
<div
  className="App"
>
  <input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <ul
    className="todo-list"
  >
    <li
      className=""
    >
      <input
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="todo-text"
      >
         
        myNewTodo
         
      </span>
    </li>
  </ul>
</div>
`;

exports[`allows the creation and listing of todos 3`] = `
<div
  className="App"
>
  <input
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <ul
    className="todo-list"
  >
    <li
      className=""
    >
      <input
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="todo-text"
      >
         
        myNewTodo
         
      </span>
    </li>
    <li
      className=""
    >
      <input
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="todo-text"
      >
         
        myNewTodo2
         
      </span>
    </li>
  </ul>
</div>
`;
